# benchbot_supervisor

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
actions/: active_control.yaml  passive_control.yaml
benchbot_supervisor/: __init__.py  __main__.py  benchbot_supervisor.py
benchbot_supervisor/actions/: passive_control.yaml
benchbot_supervisor/observations/: ground_truth.yaml
benchbot_supervisor/robots/: carter_sim.yaml  guiabot_real.yaml
benchbot_supervisor/scripts/: benchbot_supervisor  supervisor
data/: default.json
docs/: Structure.odp
launch/: benchbot_supervisor.launch
locations/: guiabot_demo.json  stage_locations.json
observations/: dead_reckoning.yaml  ground_truth.yaml
robots/: carter.yaml  carter_sim.yaml  guiabot_real.yaml
scripts/: base.py  benchbot_supervisor  core.py  random_walk  simple.py  supervisor
src/: benchbot_supervisor.py  caching_callbacks.py  supervisor_callbacks.py
src/benchbot_supervisor/: __init__.py
src/benchbot_supervisor/observations/: ground_truth.yaml
tasks/: example.json  guiabot_demo.json  guiabot_demo_simple.json  pepper_demo.json  semslam_active.yaml  stage_demo_simple.json
