<?xml version="1.0"?>
<package format="2">
  <name>benchbot_supervisor</name>
  <version>0.0.0</version>
  <description>The benchbot_supervisor package</description>

  <maintainer email="b.talbot@qut.edu.au">Ben Talbot</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ros_numpy</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
